--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1 class="accordian__heading">
           What is a Large Language Model (LLM)?
         </h1>
-        <div class="accordian__para">
+        <div class="accordian__para active">
           <p class="accordian__para--wrapper">
             A Large Language Model is a type of AI trained on a massive amount
             of text to understand and generate human-like language. Its core
@@ -79,5 +79,6 @@
         </div>
       </div>
     </section>
+    <script src="./script.js"></script>
   </body>
 </html>
